# DikuMUD-Rust

./: Cargo.toml  README.md
lib/: actions  board.messages  players  tinyworld.wld
src/: main.rs
src/diku/: act_comm.rs  act_movement.rs  act_offensive.rs  act_social.rs  comm.rs  constants.rs  fight.rs  game.rs  handler.rs  interpreter.rs  limits.rs  mod.rs  modify.rs  signals.rs  spec_assign.rs  spec_procs.rs  spell_parser.rs  spells.rs  structs.rs  types.rs  utility.rs
